--- a/mobileApp/app/src/main/res/layout/fragment_login.xml
+++ b/mobileApp/app/src/main/res/layout/fragment_login.xml
@@ -86,4 +86,24 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <Button
+        android:id="@+id/btnFaceRecog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FaceID"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
+        android:id="@+id/btnSendFaceId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send FACEID"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
