--- a/projektUI/projekt-ui/styles/globals.css
+++ b/projektUI/projekt-ui/styles/globals.css
@@ -1,9 +1,10 @@
 html, body {
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #f2f4f8;
 }
 div .aligment{
   align-items: center;
