--- a/mobileApp/app/src/main/res/navigation/nav_graph.xml
+++ b/mobileApp/app/src/main/res/navigation/nav_graph.xml
@@ -3,15 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navgraph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/mainFragment">
 
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.npo_agregat.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/settingsFragment"
+        android:name="com.example.npo_agregat.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.npo_agregat.LoginFragment"
-        android:label="LoginFragment" />
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.npo_agregat.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" /><action android:id="@+id/action_global_loginFragment" app:destination="@id/loginFragment"/>
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.npo_agregat.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" />
+    <action android:id="@+id/action_global_loginFragment" app:destination="@id/loginFragment" />
 </navigation>
