--- a/mobileApp/app/src/main/res/navigation/nav_graph.xml
+++ b/mobileApp/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_loginFragment_to_tfaFragment"
             app:destination="@id/tfaFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
